# tyas-tapl

./: README.md  tyas-tapl.cabal
src/: Lib.hs
